--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "angular": "^1.6.2",
+    "angular-cookies": "^1.6.6",
     "angular-route": "^1.6.2",
     "simple-line-icons": "^2.3.2"
   },
