--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 Django==1.10.2
-pkg-resources==0.0.0
-Django==1.10.2
 django-tastypie==0.13.3
+djangorestframework==3.7.1
+olefile==0.44
+Pillow==4.2.0
 pkg-resources==0.0.0
+Pygments==2.2.0
 python-dateutil==2.6.0
 python-mimeparse==1.6.0
 six==1.10.0
